--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -35,7 +36,7 @@
             <li>
                 <div class="user-view">
                     <div class="background">
-                        <img src="images/cliff.png" style="width:230px;height:230px;border-radius:50%;">
+                        <img src="static/images/cliff.png" style="width:230px;height:230px;border-radius:50%;">
                     </div>
                     <div class="side" style="padding-top:140px;text-align: center;">
                         <a href="#name"><span class="white-text name" style="color:deeppink;">Cliff</span></a>
