applied google fonts to the header

--- a/award/templates/index.html
+++ b/award/templates/index.html
@@ -4,6 +4,7 @@
 {% block content %}
 {{ block.super }}
 <div class="container-fluid home-content">
+    <h3>WELCOME TO AWARD</h3>
     <h5 style="color:#ffffff">Site of the day {{date|date:"l d-F Y"}}</h5>
     <br>
     <section class="sect">
