--- a/award/templates/registration/base.html
+++ b/award/templates/registration/base.html
@@ -4,32 +4,39 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  {%if title%}
+    {%if title%}
 
-  <title>{{title}}</title>
+    <title>{{title}}</title>
 
-  {%endif%}
+    {%endif%}
 
-  {% block styles %}
+    {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/award.css' %}">
-  {% endblock %}
+    {% endblock %}
 
 </head>
 
 <body>
 
-  {% block content %}  {%endblock%}
+    {% block content %} {%endblock%}
 
 
-  {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    {% bootstrap_javascript %}
-  {% endblock %}
+    {% block materialize%}
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
+
+    {% endblock %}
+
 
 </body>
+
 </html>
