--- a/award/templates/base.html
+++ b/award/templates/base.html
@@ -22,6 +22,8 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/animate.css'%}">
+    <link rel="stylesheet" href="{% static 'css/materialize.min.css'%}">
     {% endblock %}
 
 
