added registration forms

--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -30,26 +30,6 @@
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <nav style="background-color:#00897b;">
             <a class="btn btn-outline-primary" style="font-size:x-large;" href="">Awards</a>
-            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'index_page' %}">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'update_project' %}">Post Project</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' profile.id %}">Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/accounts/login">Login</a>
-                    </li>
-                    {% endif %} -->
 
             <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Account</a>
 
@@ -75,7 +55,7 @@
             </ul>
 
             </ul>
-            <form  role="search" action="{% url 'search' %}">
+            <form>
                       <input class="form-control mr-sm-2" type="search" placeholder="Search projects" aria-label="Search" name="project">
                       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                     </form>
