--- a/award/templates/index.html
+++ b/award/templates/index.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
 {{ block.super }}
-<div class="container-fluid ">
-    <h3>WELCOME TO AWARD</h3>
-    <h5 style="color:#ffffff">Site of the day {{date|date:"l d-F Y"}}</h5>
+<div class="container-fluid home-content">
+    <h5 >Site of the day {{date|date:"l d-F Y"}}</h5>
     <br>
+    <a href="#" class="btn btn-primary" style="background-color: #42AB9E;">Visit Site</a>
+    <a href="#" class="btn btn-outline-primary">Interact</a>
+    <a href="#" class="btn btn-outline-primary">Collect</a>
     <section class="sect">
         <div>
             <div class="box-piesite">
@@ -13,36 +14,36 @@
                     <li class="design">
                         <div class="piesite" id="pie_0" data-pie="2.04"></div>
                         <br>
-                        <p style="color:white;font-size: 12px;">DESIGN</p>
+                        <p style="font-size: 12px;">DESIGN</p>
                     </li>
                     <li class="usability">
                         <div class="piesite" id="pie_2" data-pie="5.02"></div>
                         <br>
-                        <p style="color:white;font-size: 12px;">USABILITY</p>
+                        <p style="font-size: 12px;">USABILITY</p>
                     </li>
 
                     <li class="creativity">
                         <div class="piesite" id="pie_1" data-pie="2.04"></div>
                         <br>
-                        <p style="color:white;font-size: 12px;">CREATIVITY</p>
+                        <p style="font-size: 12px;">CREATIVITY</p>
                     </li>
                     <li class="total">
                         <div class="piesite" id="pie_3" data-pie="6.43"></div>
                         <br>
-                        <p style="color:white;font-size: 12px;">TOTAL</p>
+                        <p style="font-size: 12px;">TOTAL</p>
                     </li>
                 </ul>
             </div>
         </div>
 
     </section>
-
-
-
+</div>
+<div class="container-fluid">
+    <h5><strong>Nominees</strong> We need your vote!</h5>
     <div class="row">
         {% for data in project %}
 
-        <div class="col-md-4" id="data">
+        <div class="col-md-4">
             <div class="hovereffect">
                 <img class="img-responsive" src="{{data.screenshot.url}}" alt="Card image cap" width="100%;" heigth="300px;">
                 <div class="overlay">
@@ -52,23 +53,23 @@
             <div class="card-header">
                 <h5 class="card-title">{{data.project_name}}</h5>
                 <a href="{{data.project_url}}" class="card-text" target="blank">
-                    <buttton class="btn btn-outline-primary">Visit site</button>
+                    <buttton class="btn btn-outline-primary" >Visit site</button>
                 </a>
             </div>
             <div class="card-footer">
-                <a href="profile/{{data.profile.user.username}}/">
-                    <div class="row">
-                        <div class="">
-                            {% if data.profile.Profile_photo %}
-                            <img src="{{data.profile.Profile_photo.url}}" alt="img" width="40px" height="40px" style="border-radius: 50%; margin-left: 10px;"
-                                class="img-responsive">
-                            {% endif %}
+                    <a href="profile/{{data.profile.user.username}}/">
+                        <div class="row">
+                            <div class="">
+                                {% if data.profile.Profile_photo %}
+                                <img src="{{data.profile.Profile_photo.url}}" alt="img" width="40px" height="40px"
+                                    style="border-radius: 50%; margin-left: 10px;" class="img-responsive">
+                                {% endif %}
+                            </div>
+                            <div class="col-md-2" style="color:black;font-size: 10px;font-weight: bold;">
+                                <h4 class="card-title">{{data.profile.user.username}}</h4>
+                            </div>
                         </div>
-                        <div class="col-md-2" style="color:black;font-size: 10px;font-weight: bold;">
-                            <h4 class="card-title">{{data.profile.user.username}}</h4>
-                        </div>
-                    </div>
-                </a>
+                    </a>
                 <small class="text-muted">{{data.pub_date|timesince}}</small>
             </div>
         </div>
