--- a/award/templates/profile.html
+++ b/award/templates/profile.html
@@ -1,58 +1,48 @@
-{% extends "base.html" %}
-
+{%extends 'base.html'%}
 {% block content %}
-<div class="container-fluid">
-      <h2 class="firstletter">{{project.title}}</h2>
-  <hr>
-  
-  <div class="card mb-3 bg-dark">
-    <img class='soloimg' src="{{project.image.url}}" alt="{{ project.title }}">
-    <div class="card-body">
-      <h5 class="card-title firstletter">{{project.title}}</h5>
-      <p class="card-text">
-        <p>{{project.description}}</p>
-        <p><a target="_blank" href="{{ project.link }}"><button type="button" class="btn btn-info">Visit Site</button></a>
-        </p>
-      </p>
-      <p class="card-text"><small class="text-muted">Project by {{project.postername}}</small></p>
+{{block.super}}
+
+<header>
+
+    <div class="container-fluid">
+
+        <div class="profile">
+
+            <div class="profile-image">
+                {% if profile.profile.Profile_photo %}
+                <img src="{{profile.profile.Profile_photo.url}}" width="120px" height="120px " alt="" class="img-responsive">
+                {% endif %}
+            </div>
+
+            <div class="profile-user-settings">
+
+                <h1 class="profile-user-name" style="font-size: 25px;">{{profile.username}}</h1>
+            </div>
+            <div class="profile-bio">
+
+                <p style="font-size: 20px;"><span class="profile-real-name"><strong>{{user.username}}</strong></span>
+                    <br> Bio: {{user.profile.Bio}}</p>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+            {% for item in projo %}
+            <div class="col-md-4" id="data">
+                <img class="img-responsive" src="{{item.screenshot.url}}" alt="Card image cap" width="100%;" heigth="300px;">
+            </div>
+            <div class="card-header">
+                <h5 class="card-title">{{data.project_name}}</h5>
+                <a href="{{item.project_url}}" class="card-text">
+                    <buttton class="btn btn-outline-primary">Visit site</button>
+                </a>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">{{data.pub_date|timesince}}</small>
+            </div>
+            {% endfor %}
+        </div>
+
     </div>
-  </div>
-  <p></p>
-  <a href="{% url 'rating' project.id %}"><button type="button" class="btn btn">Rate Now</button></a>
-  <br>
-  <br>
-
-  
-  {% if ratings%}
-  <h5>All Ratings</h5>
-  <div class="card text-white bg-secondary mb-3">
-      <div class="card-body firstletter" >
-          <p>Design: {{a.design__avg | floatformat:1}}</p>
-          <p>Usability: {{b.usability__avg | floatformat:1}}</p>
-          <p>Content: {{c.content__avg | floatformat:1}}</p>
-          <p>Average: {{d.average__avg | floatformat:1}}</p>
-      </div>
-    </div>
-  <br>
-
-  <h5>User Ratings</h5>
-  {% for rating in ratings %}
-  <div class="card text-white bg-secondary mb-3">
-      <div class="card-body firstletter" >
-          <p>Design: {{rating.design}}</p>
-          <p>Usability: {{rating.usability}}</p>
-          <p>Content: {{rating.content}}</p>
-          <p></p>
-          <p>Average: {{rating.average}}</p>
-        <footer  style="color:white;"><cite title="Source Title">{{rating.postername}}</cite></footer>
-      </div>
-    </div>
-  <p></p>
-  {% endfor %}
-
-  {% else %}
-  <h4> No Ratings at the moment.</h4>
-  {% endif %}
-</div>
-
-{% endblock %}
+    {% endblock %}
