--- a/award/templates/project.html
+++ b/award/templates/project.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <div class="card mb-3">
+            <div class="card mb-3" id="img-proj">
                 <div>
                     <img class="img-responsive" src="{{project.screenshot.url}}" alt="Card image cap" width="100%;"
                         height="400px;">
