--- a/award/templates/registration/login.html
+++ b/award/templates/registration/login.html
@@ -1,39 +1,40 @@
 {%extends "registration/base.html"%}
-
 {% block content %}
 <div class="container">
-    <div class="row">
-        <!-- Empty div -->
-        {% if form.errors %}
+  <div class="row">
+    <!-- Empty div -->
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      {% if form.errors %}
         <p> Password or Username is incorrect </p>
-        {% endif %}
-        <div class="panel panel-default">
+      {% endif %}
+      <div class="panel panel-default">
 
+        <div class="panel-heading">
+          <h3 class="text-center">Sign In</h3>
+        </div>
+        <div class="panel-body">
 
-            <div class="panel-body">
+          <form  action="/accounts/login/" method="post">
+            {% csrf_token %}
+            {{ form.field }}
 
-                <form action="/url/to/submit/" method="post">
-                    {% csrf_token %}
-                    {{ form.field }}
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
-                <input type="submit" class="btn btn-primary btn-sm" value="Login">
-
-
-
-                <p> Don't have an account? <a href="/accounts/register">Register here</a>
-                </p>
-
-
-                <input type="hidden" name="next" value="{{next}}">
-
-
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary btn-sm" value="Login">
             </div>
+
+            <input type="hidden" name="next" value="{{next}}">
+
+          </form>
+
         </div>
 
+      </div>
+
     </div>
+    <!-- empty div -->
+    <div class="col-md-4"></div>
+  </div>
 </div>
 
 {% endblock %}
