--- a/award/templates/registration/registration_form.html
+++ b/award/templates/registration/registration_form.html
@@ -1,71 +1,39 @@
 {%extends "registration/base.html"%}
 {% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <!-- Empty div -->
-        <div class="col-md-4">
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                </div>
-                <div class="col-md-3"></div>
-            </div>
+<div class="container">
+  <div class="row">
+    <!-- Empty div -->
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      {% if form.errors %}
+        <p> Some Information Might be Incorrect </p>
+      {% endif %}
+      <div class="panel panel-default">
+
+        <div class="panel-heading">
+          <h3 class="text-center">Sign Up</h3>
         </div>
-        <div class="col-md-4">
-            {% if form.errors %}
-            <p> Check your information and before submiting </p>
-            {% endif %}
-            <div class="card" id="user">
+        <div class="panel-body">
 
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-2"></div>
-                        <h2>Latest Awards</h2>
-                    </div>
-                </div>
-                <div class="col-md-2"></div>
+          <form  action="/accounts/register/" method="post">
+            {% csrf_token %}
+            {{ form.field }}
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
             </div>
 
-            <div class="card-body">
-                <form action="{%url 'rating' idd %}" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{ form.field }}
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
+            <input type="hidden" name="next" value="{{next}}">
 
-            </div>
-            <div class="card-footer text-center ">
+          </form>
 
-                <h3> By signing up, you agree to our</h3>
-                <br>
-                <a href="https://help.instagram.com/581066165581870" target="blank" style="color:gray">Terms</a>,
-                <a href="https://help.instagram.com/519522125107875" target="blank" style="color:gray">Data Policy</a>
-                and<br><a href="https://help.instagram.com/1896641480634370?ref=ig" target="blank" style="color:gray">Cookies
-                    Policy.</a>
-
-
-            </div>
-            <div class="card text-center">
-                <p>Open an account now <a href="/accounts/login/?next=/">sign-in</a></p>
-            </div>
-            <div class="app-download-links">
-                <p style="text-align: center">Get the app.</p>
-                <a href="#"><img src="https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-appstore.png
-     https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-appstore.png
-     "
-                        alt="Download on App Store" /></a>
-                <a href="#"><img src="https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-googleplay.png
-     https://res.cloudinary.com/jorpdesigns/image/upload/v1533403096/download-googleplay.png
-     "
-                        alt="Download on Google Play" /></a>
-            </div>
         </div>
+
+      </div>
 
     </div>
+    <!-- empty div -->
+    <div class="col-md-4"></div>
+  </div>
 </div>
-<!-- empty div -->
-<div class="col-md-4"></div>
-</div>
+
 {% endblock %}
