--- a/award/templates/update_project.html
+++ b/award/templates/update_project.html
@@ -1,19 +1,18 @@
 {%extends 'base.html'%}
 {% load materialize %}
+
 {% block content %}
 <div class="container-fluid">
-    <div class="row" id="project">
+    <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8" id="formpro">
+        <div class="col-md-8">
             <h5>UPLOAD NEW PROJECTS</h5>
-            <form  action="{%url 'update_profile' %}" method="post" enctype="multipart/form-data">
+            <form action="{% url 'upload_project' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.field }}
-                <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                </form>
+                <input type="submit" class="btn btn-outline-success" value="Upload">
             </form>
+
         </div>
         <div class="col-md-2"></div>
     </div>
