--- a/award/templates/edit_profile.html
+++ b/award/templates/edit_profile.html
@@ -1,3 +1,4 @@
+
 {%extends 'base.html'%}
 {% block content %}
 <div class="container top" id="proc">
@@ -15,10 +16,8 @@
         <div class="col-md-8">
             <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form.field }}
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+                {{ form }}
+                <input type="submit" class="btn btn-success" value="Update">
             </form>
         </div>
     </div>
