--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -22,41 +22,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
 
     <!--JavaScript at end of body for optimized loading-->
 
     <body>
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <nav style="background-color:#00897b;">
-            <a class="btn btn-outline-primary" style="font-size:x-large;" href="">Awards</a>
+            <a class="btn btn" style="font-size:x-large;" href="{% url 'index' %}">AWARDS</a>
+            <a class="btn btn" style="float:right;font-size:x-large;" href="{% url 'myprojects' %}">Projects</a></li>
 
             <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Account</a>
-
             <!-- Dropdown Structure -->
             <ul id='dropdown1' class='dropdown-content'>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'index_page' %}">Home</a>
-                </li> {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'update_project' %}">Post Project</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' profile.id %}">Profile</a>
-                </li>
+                    <a class="nav-link" href="{% url 'index' %}">Home</a></li>
+              
+              
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
-                {% else %}
+
+ 
+               
                 <li class="nav-item">
                     <a class="nav-link" href="/accounts/login">Login</a>
                 </li>
-                {% endif %}
-            </ul>
 
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'new_projects' %}">New project</a>
+                </li>
             </ul>
             <form>
-                      <input class="form-control mr-sm-2" type="search" placeholder="Search projects" aria-label="Search" name="project">
+                      <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;" placeholder="Search projects" aria-label="Search" name="project">
                       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                     </form>
             </div>
@@ -80,7 +81,6 @@
             </li>
             <li><a class="waves-effect" href="contact">Contacts</a></li>
             <div class="divider"></div>
-            <li><a class="wave-effect" href="projects">Projects</a></li>
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
