--- a/award/templates/profile.html
+++ b/award/templates/profile.html
@@ -1,48 +1,34 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
 {{block.super}}
 
-<header>
+<div class="container">
+  <div class="row">
+    {{request.user.username}}
 
-    <div class="container-fluid">
+    <div class="col-md-4">
 
-        <div class="profile">
-
-            <div class="profile-image">
-                {% if profile.profile.Profile_photo %}
-                <img src="{{profile.profile.Profile_photo.url}}" width="120px" height="120px " alt="" class="img-responsive">
-                {% endif %}
-            </div>
-
-            <div class="profile-user-settings">
-
-                <h1 class="profile-user-name" style="font-size: 25px;">{{profile.username}}</h1>
-            </div>
-            <div class="profile-bio">
-
-                <p style="font-size: 20px;"><span class="profile-real-name"><strong>{{user.username}}</strong></span>
-                    <br> Bio: {{user.profile.Bio}}</p>
-
-            </div>
-
-        </div>
-
-        <div class="row">
-            {% for item in projo %}
-            <div class="col-md-4" id="data">
-                <img class="img-responsive" src="{{item.screenshot.url}}" alt="Card image cap" width="100%;" heigth="300px;">
-            </div>
-            <div class="card-header">
-                <h5 class="card-title">{{data.project_name}}</h5>
-                <a href="{{item.project_url}}" class="card-text">
-                    <buttton class="btn btn-outline-primary">Visit site</button>
-                </a>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">{{data.pub_date|timesince}}</small>
-            </div>
-            {% endfor %}
-        </div>
-
+      <img  src="{{profile.photo.url}}" class="radius" alt="Project" class="img-responsive">
+      <p> Bio: {{profile.bio}}</p>
     </div>
-    {% endblock %}
+
+    <div class="profile-user-settings">
+
+      <h1 class="profile-user-name">{{profile.profile}}</h1>
+      <h4>{{profile.contact}}</h4>
+
+      <button class="btn profile-create-btn"><a href="{% url 'newprofile' %}">Edit profile</a> </button>
+      {% for project in projects %}
+        <p>Title: {{project.title}}</p>
+        <img  src="{{project.image.url}}" class="radius" alt="Project" class="img-responsive">
+      {% endfor%}
+  </div>
+
+
+
+</div>
+
+
+{% endblock %}
