--- a/award/templates/project.html
+++ b/award/templates/project.html
@@ -1,59 +1,70 @@
-{%extends 'base.html'%}
-{% block content %}
-{{block.super}}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="card mb-3" id="img-proj">
-                <div>
-                    <img class="img-responsive" src="{{project.screenshot.url}}" alt="Card image cap" width="100%;"
-                        height="400px;">
-                </div>
-                <div class="card-body">
-                    <h5><strong>{{project.project_name}}</strong></h5>
-                    <p>{{project.location}}</p>
-                    <p class="card-text">{{project.project.user.username}}</p>
-                    <p class="card-text" style="font-size: 20px;"><small class="text-muted">{{project.pub_date}}</small></p>
-                    <a href="{% url 'rate' project.id %}"><button class="btn btn-outline-primary">Vote Now</button></a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
-</div>
-<div class="jumbotron">
-    <div class="row">
 
-        {% for item in rate %}
-        <div class="col-md-2">
-            <h6>{{request.user}}</h6>
-        </div>
-        <div class="col-md-2">
-            <h6>
-                <stong> Design </stong>
-            </h6>
-            {{item.design}}
-        </div>
-        <div class="col-md-2">
-            <h6>
-                <stong> Creativity </stong>
-            </h6>
-            {{item.creativity}}
-        </div>
-        <div class="col-md-3">
-            <h6>
-                <stong> Usability </stong>
-            </h6>
-            {{item.usability}}
-        </div>
-        <div class="col-md-3">
-            <h6>
-                <stong> Average </stong>
-            </h6>
-            {{item.average}}
-        </div>
-        {% endfor %}
+{%extends 'base.html'%}
+
+{% block content %}
+<div class="container">
+  <div class="row">
+    <h1 class="text-center">{{project.project}}</h1>
+  </div>
+  <hr>
+
+  <div class="row">
+    <div class="col-md-3">
     </div>
+    <div class="col-md-6">
+      <img src="{{project.image.url}}" width="500px" height="500px" class="img-responsive" alt="">
+    </div>
+    <div class="col-md-3">
+    </div>
+  </div>
+<br>
+<br>
+
+   <div class="row">
+   {% autoescape on %}
+   {{image.post| safe}}
+   {% endautoescape %}
+
+   </div>
+
+
+  <div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-6 text-center">
+
+      <b><p class = "text-center"> <a href="{{project.link}}">{{project.link}}</a></p>
+      <p>{{project.description}}</p>
+      <button type="button" name="button"> <a href="/project-vote/{{project.id}}"> vote</a></button>
+      </b>
+    </div>
+    <div class="col-md-3">
+    </div>
+  </div>
+  <br><br>
+  <div class="col-md-3">
+
+  </div>
+  <div class="col-md-6">
+   <hr>
+    <b>design : {{project.design}} usability: {{project.usability}} Content: {{project.content}}</b>
+  <hr>
+  </div>
+
+  <div class="col-md-3">
+
+  </div>
+  <br><br>
+  <div class="progress">
+     Design: <div class="progress-bar progress-bar-success" role="progressbar"  aria-valuemin="0" aria-valuemax="10" style="width:40%">
+     Usability: <div class="progress-bar progress-bar-success" role="progressbar"  aria-valuemin="0" aria-valuemax="10" style="width:40%">
+     Context: <div class="progress-bar progress-bar-success" role="progressbar"  aria-valuemin="0" aria-valuemax="10" style="width:40%">
+
+
+    </div>
+  </div>
+
+
 </div>
+
 {% endblock %}
