--- a/award/templates/registration/login.html
+++ b/award/templates/registration/login.html
@@ -1,10 +1,11 @@
+
 {%extends "registration/base.html"%}
 {% block content %}
 <div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col s4"></div>
+    <div class="col s4">
       {% if form.errors %}
         <p> Password or Username is incorrect </p>
       {% endif %}
@@ -17,10 +18,11 @@
 
           <form  action="/accounts/login/" method="post">
             {% csrf_token %}
-            {{ form.field }}
+            {{form}}
 
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Login">
+              <input type="submit" class="btn btn-primary btn-sm" style="font-family: 'Cormorant Garamond', serif;" value="Login">
+              <p>Register <a href="/accounts/register">here</a></p>
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -33,7 +35,7 @@
 
     </div>
     <!-- empty div -->
-    <div class="col-md-4"></div>
+    <div class="col s4"></div>
   </div>
 </div>
 
