--- a/award/templates/registration/registration_form.html
+++ b/award/templates/registration/registration_form.html
@@ -1,10 +1,10 @@
 {%extends "registration/base.html"%}
-{% block content %}
+{% block content%}
 <div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col s4"></div>
+    <div class="col s4">
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
       {% endif %}
@@ -17,9 +17,9 @@
 
           <form  action="/accounts/register/" method="post">
             {% csrf_token %}
-            {{ form.field }}
+            {{ form }}
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
+              <input type="submit" class="btn btn-primary btn-sm"  style="font-family: 'Cormorant Garamond', serif;" value="Sign Up">
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -32,8 +32,7 @@
 
     </div>
     <!-- empty div -->
-    <div class="col-md-4"></div>
+    <div class="col s4"></div>
   </div>
 </div>
-
-{% endblock %}
+{% endblock%}
