used modal to display about us page

--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <nav style="background-color:#00897b;">
             <a class="btn btn" style="font-size:x-large;" href="{% url 'index' %}">AWARDS</a>
+            <a class="wave-effect" href="{% url 'contact' %}">Contact</a>
             <a class="btn btn" style="float:right;font-size:x-large;" href="{% url 'myprojects' %}">Projects</a></li>
 
             <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Account</a>
@@ -74,8 +75,7 @@
                     </div>
                 </div>
             </li>
-            <div class="divider"></div>
-            <li><a class="wave-effect" href="about us">About us</a></li>
+           
             <li>
                 <div class="divider"></div>
             </li>
