--- a/award/templates/index.html
+++ b/award/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 {{ block.super }}
-<div class="container-fluid home-content">
+<div class="container-fluid">
   <a class="btn modal-trigger" style="float:right;" href="#modal1">Contact</a>
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
-    <div class="modal-content" style="text-align: center;font-size: x-large;">
+    <div class="modal-content" style="text-align: center;font-size: x-large;background-color:#00838f;">
       <h3>Contacts</h3>
       <ul>
         <li>
@@ -36,5 +36,5 @@
   <h3 style="font-family: 'Cormorant Garamond', serif;">WELCOME TO AWARD</h3>
   <h4 style="font-family: 'Dancing Script', cursive;text-align: center;">To day is on
     {{date|date:"l d-F Y"}}</h4>
-
-  {% endblock %}
+</div>
+{% endblock %}
