--- a/award/templates/index.html
+++ b/award/templates/index.html
@@ -33,8 +33,10 @@
       $('.modal').modal();
     });
   </script>
+  <br><br><br>
   <h3 style="font-family: 'Cormorant Garamond', serif;">WELCOME TO AWARD</h3>
-  <h4 style="font-family: 'Dancing Script', cursive;text-align: center;">To day is on
-    {{date|date:"l d-F Y"}}</h4>
+  <br>
+  <h4 style="font-family: 'Dancing Script', cursive;text-align: center;">
+  Site of the day {{date|date:"l d-F Y"}}</h4>
 </div>
 {% endblock %}
