--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -23,70 +23,71 @@
 </head>
 
 
-    <!--JavaScript at end of body for optimized loading-->
+<!--JavaScript at end of body for optimized loading-->
 
-    <body>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <nav style="background-color:#00897b;">
-            <a class="btn btn" style="font-size:x-large;" href="{% url 'index' %}">AWARDS</a>
-            <a class="btn btn" style="float:right;font-size:x-large;" href="{% url 'myprojects' %}">Projects</a></li>
+<body>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <nav style="background-color:#00897b;">
+        <a class="btn btn" style="font-size:x-large;" href="{% url 'index' %}">AWARDS</a>
+        <a class="btn btn" style="float:right;font-size:x-large;" href="{% url 'myprojects' %}">Projects</a></li>
 
-            <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Account</a>
-            <!-- Dropdown Structure -->
-            <ul id='dropdown1' class='dropdown-content'>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a></li>
-              
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
-               
-                <li class="nav-item">
-                    <a class="nav-link" href="/accounts/login">Login</a>
-                </li>
+        <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Account</a>
+        <!-- Dropdown Structure -->
+        <ul id='dropdown1' class='dropdown-content'>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'index' %}">Home</a></li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'new_projects' %}">New project</a>
-                </li>
-            </ul>
-            <form>
-                      <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;" placeholder="Search projects" aria-label="Search" name="project">
-                      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-            </div>
-        </nav>
-
-        <ul id="slide-out" class="sidenav">
-            <li>
-                <div class="user-view">
-                    <div class="background">
-                        <img src="static/images/cliff.png" style="width:230px;height:230px;border-radius:50%;">
-                    </div>
-                    <div class="side" style="padding-top:140px;text-align: center;">
-                        <a href="#name"><span class="white-text name" style="color:deeppink;">Cliff</span></a>
-                    </div>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
             </li>
-           
-            <li>
-                <div class="divider"></div>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/accounts/login">Login</a>
             </li>
-            <li><a class="waves-effect" href="contact">Contacts</a></li>
-            <div class="divider"></div>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'new_projects' %}">New project</a>
+            </li>
         </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <form style="text-align: center;">
+            <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;color:black;" placeholder="Search projects"
+                aria-label="Search" name="project">
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        </div>
+    </nav>
 
-        <script>
-            $(document).ready(function () {
-                $('.sidenav').sidenav();
-            });
+    <ul id="slide-out" class="sidenav">
+        <li>
+            <div class="user-view">
+                <div class="background">
+                    <img src="static/images/cliff.png" style="width:230px;height:230px;border-radius:50%;">
+                </div>
+                <div class="side" style="padding-top:140px;text-align: center;">
+                    <a href="#name"><span class="white-text name" style="color:deeppink;">Cliff</span></a>
+                </div>
+            </div>
+        </li>
 
-            $('.dropdown-trigger').dropdown();
-        </script>
-    </body>
+        <li>
+            <div class="divider"></div>
+        </li>
+        <li><a class="waves-effect" href="contact">Contacts</a></li>
+        <div class="divider"></div>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
+    <script>
+        $(document).ready(function () {
+            $('.sidenav').sidenav();
+        });
+
+        $('.dropdown-trigger').dropdown();
+    </script>
+</body>
 
 </html>
