--- a/award/templates/project.html
+++ b/award/templates/project.html
@@ -33,8 +33,8 @@
     </div>
     <div class="col-md-6 text-center">
 
-      <b><p class = "text-center"> <a href="{{project.link}}">{{project.link}}</a></p>
-      <p>{{project.description}}</p>
+      <b><p class = "text-center"> <a style="color:black;"href="{{project.link}}">{{project.link}}</a></p>
+      <p style="color:black;">{{project.description}}</p>
       <button type="button" name="button"> <a href="/project-vote/{{project.id}}"> vote</a></button>
       </b>
     </div>
@@ -55,7 +55,7 @@
 
   </div>
   <br><br>
-  <div class="progress">
+  <div class="progress" style="color:black;">
      Design: <div class="progress-bar progress-bar-success" role="progressbar"  aria-valuemin="0" aria-valuemax="10" style="width:40%">
      Usability: <div class="progress-bar progress-bar-success" role="progressbar"  aria-valuemin="0" aria-valuemax="10" style="width:40%">
      Context: <div class="progress-bar progress-bar-success" role="progressbar"  aria-valuemin="0" aria-valuemax="10" style="width:40%">
