--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="{% url 'new_projects' %}">New project</a>
             </li>
         </ul>
-        <form style="text-align: center;">
+        <form style="text-align: center; color:black">
             <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;color:black;" placeholder="Search projects"
                 aria-label="Search" name="project">
             <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
