--- a/award/templates/edit_profile.html
+++ b/award/templates/edit_profile.html
@@ -1,17 +1,20 @@
 
 {%extends 'base.html'%}
 {% block content %}
-<div class="container top" id="proc">
-    <div class="row edit-profile">
+<div class="container top">
+    <div class="row">
         <div class="col-md-4 edit-areas">
             <h3>Account</h3>
+            <br>
             {% if profile.profile.Profile_photo %}
             <img src="{{profile.profile.Profile_photo.url}}" alt="img" width="120px" height="120px ">
             {% endif %}
             <br>
-            <h6>Bio</h6>
             <br>
-            <p>{{user.profile.Bio}}</p>
+            <h6 style="padding-top:40px;color:black">Bio</h6>
+            <br>
+            <br>
+            <p style="padding-top:40px;color:black">{{user.profile.Bio}}</p>
         </div>
         <div class="col-md-8">
             <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
