--- a/award/templates/new_project.html
+++ b/award/templates/new_project.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
+<div class="container" style="background-color:#00897b;">
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
