--- a/award/templates/profile.html
+++ b/award/templates/profile.html
@@ -10,25 +10,16 @@
 
     <div class="col-md-4">
 
-      <img  src="{{profile.photo.url}}" class="radius" alt="Project" class="img-responsive">
-      <p> Bio: {{profile.bio}}</p>
+      <img src="{{profile.photo.url}}" class="radius" alt="Project" class="img-responsive">
+      <h3 style="color:black"> Bio: {{profile.bio}}</h3>
     </div>
-
-    <div class="profile-user-settings">
-
-      <h1 class="profile-user-name">{{profile.profile}}</h1>
-      <h4>{{profile.contact}}</h4>
-
-      <button class="btn profile-create-btn"><a href="{% url 'newprofile' %}">Edit profile</a> </button>
-      {% for project in projects %}
-        <p>Title: {{project.title}}</p>
-        <img  src="{{project.image.url}}" class="radius" alt="Project" class="img-responsive">
-      {% endfor%}
+    <h1 class="profile-user-name" style="color:black">{{profile.profile}}</h1>
+    <h3 style="color:black">{{profile.contact}}</h3>
+    <button class="btn profile-create-btn"><a href="{% url 'newprofile' %}">Edit profile</a> </button>
+    {% for project in projects %}
+    <p>Title: {{project.title}}</p>
+    <img src="{{project.image.url}}" class="radius" alt="Project" class="img-responsive">
+    {% endfor%}
   </div>
-
-
-
 </div>
-
-
 {% endblock %}
