--- a/award/templates/index.html
+++ b/award/templates/index.html
@@ -6,9 +6,9 @@
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
-    <div class="modal-content" style="text-align: center;font-size: x-large;background-color:#00838f;">
+    <div class="modal-content" style="text-align: center;font-size: x-large;background-color:#00897b;">
       <h3>Contacts</h3>
-      <ul>
+      <ul class="list">
         <li>
           Email address: cliffnyendwe2018@gmail.com
         </li>
@@ -37,6 +37,6 @@
   <h3 style="font-family: 'Cormorant Garamond', serif;">WELCOME TO AWARD</h3>
   <br>
   <h4 style="font-family: 'Dancing Script', cursive;text-align: center;">
-  Site of the day {{date|date:"l d-F Y"}}</h4>
+    Site of the day {{date|date:"l d-F Y"}}</h4>
 </div>
 {% endblock %}
