--- a/award/templates/edit_profile.html
+++ b/award/templates/edit_profile.html
@@ -19,7 +19,7 @@
         <div class="col-md-8">
             <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.media }}
                 <input type="submit" class="btn btn-success" value="Update">
             </form>
         </div>
