--- a/award/templates/project.html
+++ b/award/templates/project.html
@@ -1,30 +1,40 @@
 {%extends 'base.html'%}
+
 {% block content %}
 <div class="container">
   <div class="row">
-    <h1 class="text-center">{{project.project}}</h1>
-  </div>
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card" style="width: 370px;background-color: cornsilk;">
-        <div class="card-image" style="text-align: center;">
+    <div class="col s12 m6">
+      <div class="card-panel">
+        <div class="card-image">
+          <h1 class="text-center">{{project.project}}</h1>
 
-            <img src="{{project.image.url}}" width="200px" height="380px" class="img-responsive" alt="">
-       
-        </div>
-        <br>
+          <hr>
 
-        <div class="row">
-          <div class="card-action">
-            <p class="text-center"> <a style="color:black;font-size: large;" href="{{project.link}}">{{project.link}}</a></p>
-            <p style="color:black;">{{project.description}}</p>
-            </b>
-            <hr>
-            <b>design : {{project.design}} usability: {{project.usability}} Content: {{project.content}}</b>
+          <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6">
+              <img src="{{project.image.url}}" width="100%" height="500px" class="img-responsive" alt="">
+            </div>
           </div>
+
+          <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6 text-center">
+              <div class="card-action">
+
+                <p class="text-center"> <a href="{{project.link}}">{{project.link}}</a></p>
+                <hr>
+                <p>{{project.description}}</p>
+              </div>
+            </div>
+          </div>
+          <b>design : {{project.design}} usability: {{project.usability}} Content: {{project.content}}</b>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 {% endblock %}
