--- a/award/templates/registration/login.html
+++ b/award/templates/registration/login.html
@@ -22,7 +22,7 @@
 
             <div class="form-group">
               <input type="submit" class="btn btn-primary btn-sm" style="font-family: 'Cormorant Garamond', serif;" value="Login">
-              <p style="color:red">Register <a href="/accounts/register">here</a></p>
+              <p style="color:white">Register <a href="/accounts/register">here</a></p>
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -34,7 +34,6 @@
       </div>
 
     </div>
-    <!-- empty div -->
     <div class="col s4"></div>
   </div>
 </div>
