added rating form where you can rate

--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="{% url 'new_projects' %}">New project</a>
             </li>
         </ul>
-        <form style="text-align: center; color:black">
+        <form style="color:black">
             <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;color:black;" placeholder="Search projects"
                 aria-label="Search" name="project">
             <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
