--- a/award/templates/newprofile.html
+++ b/award/templates/newprofile.html
@@ -1,21 +1,38 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-<div class="container" style="text-align: center;width: 50%;;">
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card" style="background-color:#00897b; ">
-        <h4>Update Profile</h4>
+{% load bootstrap4 %} 
+{% load staticfiles %}
+<!DOCTYPE html>
+<html>
 
-        <br>
-        <form action="{%url 'profile' %}" method="post" enctype="multipart/form-data">
-          {%csrf_token%}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-          {{ form }}
-          <input type="submit" class="btn btn-success btn-lg" value="Update Profile">
-        </form>
-      </div>
-    </div>
-  </div>
+  <title>Update Profile</title>
+  {{form.media}}
+
+{% block styles %} {% bootstrap_css %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endblock %}
+
+</head>
+
+<body>
+  {% include 'navbar.html' %}
+  <div class="container">
+      <div class="intro">
+          <h2>Update Profile</h2>
+        </div>
+  <hr>
+  <form  action="{%url 'newprofile' %}" method="post" enctype="multipart/form-data">
+    {%csrf_token%}
+
+    {% bootstrap_form form%}
+    <input type="submit" class="btn btn-success btn-lg" value="Update Profile">
+  </form>
+
+  {% block scripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% bootstrap_javascript %} {% endblock %}
 </div>
-{% endblock %}
+</body>
+
+</html>
