--- a/award/templates/profile.html
+++ b/award/templates/profile.html
@@ -1,25 +1,55 @@
-{% extends 'base.html' %}
-{% load static %}
+
+{% extends "base.html" %}
+{% load bootstrap4 %}
 
 {% block content %}
-{{block.super}}
-
 <div class="container">
-  <div class="row">
-    {{request.user.username}}
-
-    <div class="col-md-4">
-
-      <img src="{{profile.photo.url}}" class="radius" alt="Project" class="img-responsive">
-      <h3 style="color:black"> Bio: {{profile.bio}}</h3>
-    </div>
-    <h1 class="profile-user-name" style="color:black">{{profile.profile}}</h1>
-    <h3 style="color:black">{{profile.contact}}</h3>
-    <button class="btn btn"><a href="{% url 'newprofile' %}">Edit profile</a> </button>
-    {% for project in projects %}
-    <p>Title: {{project.title}}</p>
-    <img src="{{project.image.url}}" class="radius" alt="Project" class="img-responsive">
-    {% endfor%}
-  </div>
+    <div class="intro">
+        <h2>Your Profile</h2>
+      </div>
+<hr>
+{% if profile.bio %}
+<div id='user-details'>
+    <p><img class="circularsquare" src="{{profile.profpic.url}}" alt=""><span class="repo-owner firstletter" style='padding:1.5em;'>{{user.username}}</span>
+    </p>
+    <p>
+      <span class='repo-owner' style=>Projects: </span>{{projectcount}}
+    </p>
 </div>
+    {{profile.bio}}
+    <p></p>
+    <span><a class='maillink' href="mailto:{{profile.contact}}">{{profile.contact}}</a></span>
+    <p></p>
+    <a href="{% url 'newprofile' %}"><button type="button" class="btn btn-info">Update Profile</button></a>   
+    <br>
+    <br>
+ {% else %}
+ <p></p>
+    <a href="{% url 'newprofile' %}"><button type="button" class="btn btn-info">Update Profile</button></a>   
+    <br>
+    <br>
+  {% endif %}
+    <div class="your-photos">
+      <h4>Your projects</h4>
+      <p></p>
+{% if projects %}
+{% for project in projects %}
+<div class="card bg-dark text-white">
+    <img class='streamimg' src="{{project.image.url}}" alt="{{ project.title }}">
+    <div class="card-img-overlay">
+      <h5 class="card-title firstletter">{{project.title}}</h5>
+      <p class="card-text firstletter">{{ project.description | truncatechars:450 }}</p>
+      <p class="card-text"><a href="{% url 'project' project.id %}"><button type="button" class="btn btn-primary">View</button></a></p>
+    </div>
+  </div>
+  <br>
+{% endfor %}
+{% else %}
+<h4>No projects to show, Add one <a href="{% url 'newproject' %}">here</a>.</h4>
+{% endif %}
+
+    </div>
+</div>
+
+
 {% endblock %}
