--- a/award/templates/search.html
+++ b/award/templates/search.html
@@ -1,25 +1,34 @@
-{%extends 'base.html'%}
+{% extends "base.html" %}
+{% load bootstrap4 %}
 {% block content %}
+
 <div class="container">
-
-  <div class="row">
-    {% if projects%}
-      <h2>Found {{ projects|length }} of searched term {{message}}</h2>
-    {% else %}
-      <h2> Found no projects for the search term {{message}}</h2>
-    {% endif %}
-
+  <div class="intro">
+    <h2>Search Results</h2>
   </div>
+  <hr>
 
-  <div class="row">
-
-  {% if projects %}
-    {% for project in projects %}
-      <div class="col-sm-6 col-md-3">
-        <a href="/project-detail/{{project.id}}">{{project.title}}</a>
-      </div>
-    {% endfor %}
+  {% if searched_projects %}
+  <h5>Found {{ searched_projects|length }} projects for the searched term '{{message}}'</h5>
+  {% else %}
+  <h5> Found 0 projects for the search term '{{message}}'</h5>
   {% endif %}
-  </div>
+
+  <br>
+
+  {% if searched_projects %}
+  <ul class="list-group list-group-flush">
+    {% for project in searched_projects %}
+    <li class="list-group-item" style="background-color: transparent;">
+      <p class="firstletter">{{project.title}}
+        <a href="{% url 'project' project.id %}" style="float:right;">
+          <button type="button" class="btn btn-info">View</button>
+        </a>
+      </p>
+
+    </li>
+    {% endfor %}
+  </ul>
+  {% endif %}
 </div>
 {% endblock %}
