--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -40,14 +40,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
             </li>
-
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'new_projects' %}">New project</a>
             </li>
         </ul>
         <form style="color:black">
-            <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;color:black;" placeholder="Search projects"
-                aria-label="Search" name="project">
+            <input class="form-control mr-sm-2" type="search" style="width:20%;text-align: center;color:black;"
+                placeholder="Search projects" aria-label="Search" name="project">
             <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
         </form>
         </div>
@@ -66,7 +65,7 @@
         </li>
 
         <li>
-        <div class="divider"></div>
+            <div class="divider"></div>
     </ul>
     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
